{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 130,
  "lineage": "5924ea77-ea22-fcca-a238-5ae7aa5364c5",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "App-LoadBalacer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/frontendIPConfigurations/frontend-ip",
                "load_balancer_rules": [
                  "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/loadBalancingRules/LBRule",
                  "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/loadBalancingRules/ssh"
                ],
                "name": "frontend-ip",
                "outbound_rules": [
                  "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/outboundRules/http"
                ],
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/publicIPAddresses/LoadBalacerPublicIp"
              }
            ],
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer",
            "location": "eastus",
            "name": "App-LoadBalacer",
            "resource_group_name": "Week6ProjectAnsibleStage",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.LoadBalacerPublicIp",
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "Scale_set_module",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Compute/virtualMachineScaleSets/StagingScaleSet/virtualMachines/0/networkInterfaces/AppScaleSet-nic/ipConfigurations/internal",
              "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Compute/virtualMachineScaleSets/StagingScaleSet/virtualMachines/2/networkInterfaces/AppScaleSet-nic/ipConfigurations/internal"
            ],
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/backendAddressPools/Scale_set_module",
            "load_balancing_rules": [
              "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/loadBalancingRules/LBRule",
              "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/loadBalancingRules/ssh"
            ],
            "loadbalancer_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer",
            "name": "Scale_set_module",
            "outbound_rules": [
              "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/outboundRules/http"
            ],
            "resource_group_name": "Week6ProjectAnsibleStage"
          },
          "dependencies": [
            "azurerm_lb.App-LoadBalacer",
            "azurerm_public_ip.LoadBalacerPublicIp",
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_outbound_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocated_outbound_ports": 1024,
            "backend_address_pool_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/backendAddressPools/Scale_set_module",
            "enable_tcp_reset": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/frontendIPConfigurations/frontend-ip",
                "name": "frontend-ip"
              }
            ],
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/outboundRules/http",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer",
            "name": "http",
            "protocol": "Tcp",
            "resource_group_name": "Week6ProjectAnsibleStage"
          },
          "dependencies": [
            "azurerm_lb.App-LoadBalacer",
            "azurerm_lb_backend_address_pool.Scale_set_module",
            "azurerm_public_ip.LoadBalacerPublicIp",
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "Helthprobe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/probes/Helthprobe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/loadBalancingRules/LBRule"
            ],
            "loadbalancer_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer",
            "name": "Helthprobe",
            "number_of_probes": 2,
            "port": 8080,
            "protocol": "Tcp",
            "resource_group_name": "Week6ProjectAnsibleStage"
          },
          "dependencies": [
            "azurerm_lb.App-LoadBalacer",
            "azurerm_public_ip.LoadBalacerPublicIp",
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "AcceseRole",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/backendAddressPools/Scale_set_module",
            "backend_address_pool_ids": [
              "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/backendAddressPools/Scale_set_module"
            ],
            "backend_port": 8080,
            "disable_outbound_snat": true,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/frontendIPConfigurations/frontend-ip",
            "frontend_ip_configuration_name": "frontend-ip",
            "frontend_port": 8080,
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/loadBalancingRules/LBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer",
            "name": "LBRule",
            "probe_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/probes/Helthprobe",
            "protocol": "Tcp",
            "resource_group_name": "Week6ProjectAnsibleStage"
          },
          "dependencies": [
            "azurerm_lb.App-LoadBalacer",
            "azurerm_lb_backend_address_pool.Scale_set_module",
            "azurerm_lb_probe.Helthprobe",
            "azurerm_public_ip.LoadBalacerPublicIp",
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/backendAddressPools/Scale_set_module",
            "backend_address_pool_ids": [
              "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/backendAddressPools/Scale_set_module"
            ],
            "backend_port": 22,
            "disable_outbound_snat": true,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/frontendIPConfigurations/frontend-ip",
            "frontend_ip_configuration_name": "frontend-ip",
            "frontend_port": 22,
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/loadBalancingRules/ssh",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/loadBalancers/App-LoadBalacer",
            "name": "ssh",
            "protocol": "Tcp",
            "resource_group_name": "Week6ProjectAnsibleStage"
          },
          "dependencies": [
            "azurerm_lb.App-LoadBalacer",
            "azurerm_lb_backend_address_pool.Scale_set_module",
            "azurerm_public_ip.LoadBalacerPublicIp",
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "AnsibleNic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/networkInterfaces/AnsibleNic",
            "internal_domain_name_suffix": "ixtmmpmwhnwu1a2xgn23isftph.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "AnsibleNicConfiguration",
                "primary": true,
                "private_ip_address": "10.30.1.8",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/publicIPAddresses/AnsiblePuBLICIp",
                "subnet_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/Web_Tier"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-8B-B1-56",
            "name": "AnsibleNic",
            "private_ip_address": "10.30.1.8",
            "private_ip_addresses": [
              "10.30.1.8"
            ],
            "resource_group_name": "Week6ProjectAnsibleStage",
            "virtual_machine_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Compute/virtualMachines/Controller"
          },
          "dependencies": [
            "azurerm_public_ip.AnsiblePuBLICIp",
            "azurerm_resource_group.RG",
            "azurerm_subnet.Web_Tier",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/networkSecurityGroups/NSG1",
            "location": "eastus",
            "name": "NSG1",
            "resource_group_name": "Week6ProjectAnsibleStage",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "147.234.130.54",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_8080",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/networkSecurityGroups/NSG2",
            "location": "eastus",
            "name": "NSG2",
            "resource_group_name": "Week6ProjectAnsibleStage",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Postgres",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "5432",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "AnsiblePuBLICIp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/publicIPAddresses/AnsiblePuBLICIp",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.124.23.9",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "AnsiblePuBLICIp",
            "resource_group_name": "Week6ProjectAnsibleStage",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "LoadBalacerPublicIp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/publicIPAddresses/LoadBalacerPublicIp",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.102.27.192",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "LoadBalacerPublicIp",
            "resource_group_name": "Week6ProjectAnsibleStage",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Data_Tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.30.2.0/24",
            "address_prefixes": [
              "10.30.2.0/24"
            ],
            "delegation": [
              {
                "name": "fs",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforPostgreSQL/flexibleServers"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/Data_Tier",
            "name": "Data_Tier",
            "resource_group_name": "Week6ProjectAnsibleStage",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "Vnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Web_Tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.30.1.0/24",
            "address_prefixes": [
              "10.30.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/Web_Tier",
            "name": "Web_Tier",
            "resource_group_name": "Week6ProjectAnsibleStage",
            "virtual_network_name": "Vnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "NSG1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/Web_Tier",
            "network_security_group_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/networkSecurityGroups/NSG1",
            "subnet_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/Web_Tier"
          },
          "dependencies": [
            "azurerm_network_security_group.NSG1",
            "azurerm_resource_group.RG",
            "azurerm_subnet.Web_Tier",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "NSG2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/Data_Tier",
            "network_security_group_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/networkSecurityGroups/NSG2",
            "subnet_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/Data_Tier"
          },
          "dependencies": [
            "azurerm_network_security_group.NSG2",
            "azurerm_resource_group.RG",
            "azurerm_subnet.Data_Tier",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.30.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3dc6e645-3b96-4d6d-8397-3379d448b37f",
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/virtualNetworks/Vnet",
            "location": "eastus",
            "name": "Vnet",
            "resource_group_name": "Week6ProjectAnsibleStage",
            "subnet": [
              {
                "address_prefix": "10.30.1.0/24",
                "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/Web_Tier",
                "name": "Web_Tier",
                "security_group": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/networkSecurityGroups/NSG1"
              },
              {
                "address_prefix": "10.30.2.0/24",
                "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/Data_Tier",
                "name": "Data_Tier",
                "security_group": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/Week6ProjectAnsibleStage/providers/Microsoft.Network/networkSecurityGroups/NSG2"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    }
  ]
}